ajout classe gestion +a verifier vecteur pour ecriture des valeur

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(projet_comm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(projet_comm sources/main.cpp sources/src/donnee.cpp sources/header/donnee.h sources/src/comm.cpp sources/header/comm.h sources/main.cpp)
+add_executable(projet_comm sources/main.cpp sources/src/donnee.cpp sources/header/donnee.h sources/src/comm.cpp sources/header/comm.h sources/src/gestion.cpp sources/header/gestion.h sources/main.cpp)
